cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers::smoke_tests::test_queue_command::case_8@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Queue:
