cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers::smoke_tests::test_rand_command::case_1@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    Album {
        id: Thing {
            tb: "album",
            id: String(
                "01J1K5B6RJ84WJXCWYJ5WNE12E",
            ),
        },
        title: "Test Album",
        artist: One(
            "Test Artist",
        ),
        release: Some(
            2021,
        ),
        runtime: 180s,
        song_count: 1,
        discs: 1,
        genre: One(
            "Test Genre",
        ),
    },
)
