cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers::smoke_tests::test_rand_command::case_3@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    Song {
        id: Thing {
            tb: "song",
            id: String(
                "01J1K5B6RJ84WJXCWYJ5WNE12E",
            ),
        },
        title: "Test Song",
        artist: One(
            "Test Artist",
        ),
        album_artist: One(
            "Test Artist",
        ),
        album: "Test Album",
        genre: One(
            "Test Genre",
        ),
        runtime: 180s,
        track: Some(
            0,
        ),
        disc: Some(
            0,
        ),
        release_year: Some(
            2021,
        ),
        extension: "mp3",
        path: "test.mp3",
    },
)
