cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers::smoke_tests::test_search_command::case_4@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Songs:
	song:01J1K5B6RJ84WJXCWYJ5WNE12E: "Test Song"

Albums:
	album:01J1K5B6RJ84WJXCWYJ5WNE12E: "Test Album" (by: One("Test Artist")),

Artists:
	artist:01J1K5B6RJ84WJXCWYJ5WNE12E: "Test Artist"
