cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers::smoke_tests::test_state_command@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
StateAudio:
	Queue: [

	],
	Queue Position: None,
	Repeat Mode: None
	Paused: true
	Muted: false
	Volume: 100.00%
