cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_collection_command_case_2@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(Collection { id: RecordId { tb: "collection", id: "01J1K5B6RJ84WJXCWYJ5WNE12E" }, name: "Collection 0", runtime: Duration { seconds: 180, nanos: 0 }, song_count: 1 })
